--- a/sections/research-page.liquid
+++ b/sections/research-page.liquid
@@ -1,3 +1,11 @@
+<style>
+    @media (max-width: 990px) {
+
+        .navBG.sticky {
+            position: relative !important;
+        }
+    }
+</style>
 <div class="generic-headerBG gh-short">
     <div class="generic-header gh-short">
         <div class="gh-text" id="theTop">
