--- a/assets/dark.css
+++ b/assets/dark.css
@@ -28,20 +28,35 @@
   .dark .warranty-col, .dark .legalText, .dark .fineprint, .dark .two-cols-narrow .col, .dark .contact-col, .dark .contact-cols-text,
   .dark .contact-tile, .dark .col-bordered a, .dark .event-box, .dark .event-link, .dark .event-invite, h4, .dark .sgl-text,
   .dark .sauna-types td, .dark .sauna-types th, .dark .research-links h3, .dark .darkP, .dark .header__icon, .dark .pt-price, .dark .price, .dark .card-information>.price, .dark .price--on-sale .price-item--regular, .dark td.cart-item__price .product-option, .dark .product-info-details, .dark .pot-col a, .dark .cart-count-bubble,
-	.dark td.cart-item__details .product-option, .dark .quantity__button, .dark .quantity__input{
+	.dark td.cart-item__details .product-option, .dark .quantity__button, .dark .quantity__input, .dark .is-empty .cart__empty-text, .dark .is-empty .cart__warnings, .dark .cart__login-paragraph a {
   	color: #FFF8E7 !important;
   }
-  .dark .stickyBG .pt-price, .dark .stickyBG .price{
+  .dark .stickyBG .pt-price, .dark .stickyBG .price {
     color:#000 !important;
   }
   .dark .stickyBG .price--on-sale .price-item--regular{
     color:#000 !important;
   }
 
+  .dark .optimize:before, .dark .compatible:before {
+    background: rgba(67,60,60,.55);
+  }
+
+  .dark .research-links h3, .dark .what-is, .dark .story, .dark .compatible h2, .dark .compatible, .dark .optimize h2, .dark .optimize {
+    color: #fff;
+  }
+
   .dark .nav-link:hover, .dark .rcat-link:hover, .dark .product-info-tab:hover, .dark .product-info-tab-on, .dark .nav-arrow-link:hover,
   .dark .page-anchor:hover, .dark .rcat-link-on, .dark .util-nav-link:hover, .dark .nav-cart:hover, .dark .sf-link:hover span, .dark .color-choice-on,
-  .dark .product-info-tabs, .dark .research-links h3 {
+  .dark .product-info-tabs {
   	border-color: #fff; 
+  }
+
+  .dark .pot-col-100 img {
+    filter: brightness(0) invert(1);
+  }
+  .dark .pot-close img {
+    filter: invert(95%) sepia(0%) saturate(6128%) hue-rotate(350deg) brightness(107%) contrast(100%);
   }
   
   .dark #bcpo .bcpo-images .bcpo-label label {
