--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js" lang="{{ request.locale.iso_code }}">
   <head>
+    <script>
+      const colorScheme = localStorage.getItem("color-scheme") || "light-mode";
+    </script>
+    
     <link    rel="stylesheet"   href="https://obscure-escarpment-2240.herokuapp.com/stylesheets/bcpo-front.css" />
     <script>
       var bcpo_product={{ product | json }}; {% if product.metafields.bcpo.bcpo_data %}var bcpo_data={{ product.metafields.bcpo.bcpo_data }};{% endif %} {% if shop.metafields.bcpo.bcpo_settings %}var bcpo_settings={{ shop.metafields.bcpo.bcpo_settings }};{% endif %}var inventory_quantity = [];{% for v in product.variants %}inventory_quantity.push({{v.inventory_quantity}});{% endfor %}if(bcpo_product) { for (var i = 0; i < bcpo_product.variants.length; i += 1) { bcpo_product.variants[i].inventory_quantity = inventory_quantity[i]; }}window.bcpo = window.bcpo || {}; bcpo.cart = {{cart | json}}; bcpo.ogFormData = FormData;
@@ -59,6 +63,7 @@
         vopoHead.parentNode.insertBefore(script, vopoHead);
       })();
     </script>
+
 
     {% style %}
     {{
