--- a/sections/reviews-page.liquid
+++ b/sections/reviews-page.liquid
@@ -20,13 +20,13 @@
 <div class="tanBG">
     <h2>What the Experts are Saying</h2>
     <div class="review-categories">
-            <a href="javascript:void(0)" class="product-info-tab product-info-tab-on rcat-link rcat-link-on" data-tab="all">All</a>
+            <a href="javascript:void(0)" class="product-info-tab product-info-tab-on rcat-link" data-tab="all">All</a>
 
-            <a href="javascript:void(0)" class="product-info-tab rcat-link rcat-link-on" data-tab="medical">Medical</a>
+            <a href="javascript:void(0)" class="product-info-tab rcat-link" data-tab="medical">Medical</a>
         
-            <a href="javascript:void(0)" class="product-info-tab rcat-link rcat-link-on" data-tab="athletic">Athletic</a>
+            <a href="javascript:void(0)" class="product-info-tab rcat-link" data-tab="athletic">Athletic</a>
 
-            <a href="javascript:void(0)" class="product-info-tab rcat-link rcat-link-on" data-tab="lifestyle">Lifestyle</a>
+            <a href="javascript:void(0)" class="product-info-tab rcat-link" data-tab="lifestyle">Lifestyle</a>
         
     </div>
     <div class="product-info-details" id="pid-all">
@@ -171,12 +171,12 @@
                         <img src="{{ 'tiphany-adams.jpg' | asset_url }}" alt="Tiphany Adams">
                         <div class="rcb-text">
                             <div class="review-name">Tiphany Adams</div>
-                            <div class="review-title etica">Strength coach at <a href="http://tiphanyadams.com">tiphanyadams.com</a></div>
+                            <div class="review-title etica">Strength coach at <a href="https://tiphanyadams.com/" target="_blank">tiphanyadams.com</a></div>
                         </div>
                     </div>
                     <div class="review-text"><p>"Retreating using red light therapy makes me smile because it feels like 🌞 and a mini vacation where you can release tensions and heavy thoughts while you relax."</p></div>
                     
-                        <div class="review-cta-wrap"><a href="tiphanyadams.com" target="_blank" class="review-cta arrow-link">Learn more about Tiphany</a></div>
+                        <div class="review-cta-wrap"><a href="https://tiphanyadams.com/" target="_blank" class="review-cta arrow-link">Learn more about Tiphany</a></div>
                     
                 </div>
                 
@@ -300,12 +300,12 @@
                         <img src="{{ 'tiphany-adams.jpg' | asset_url }}" alt="Tiphany Adams">
                         <div class="rcb-text">
                             <div class="review-name">Tiphany Adams</div>
-                            <div class="review-title etica">Strength coach at <a href="http://tiphanyadams.com/" target="_blank">tiphanyadams.com</a></div>
+                            <div class="review-title etica">Strength coach at <a href="https://tiphanyadams.com/" target="_blank">tiphanyadams.com</a></div>
                         </div>
                     </div>
                     <div class="review-text"><p>"Retreating using red light therapy makes me smile because it feels like 🌞 and a mini vacation where you can release tensions and heavy thoughts while you relax."</p></div>
                     
-                        <div class="review-cta-wrap"><a href="http://tiphanyadams.com/" target="_blank" class="review-cta arrow-link">Learn more about Tiphany</a></div>
+                        <div class="review-cta-wrap"><a href="https://tiphanyadams.com/" target="_blank" class="review-cta arrow-link">Learn more about Tiphany</a></div>
                     
                 </div>
                 
