--- a/assets/base.css
+++ b/assets/base.css
@@ -273,6 +273,14 @@ html.no-js .no-js-hidden {
   }
 }
 
+@media screen and (max-width: 1330px) {
+	.section + .section {
+		max-width: 90%;
+		margin: 0 auto !important;
+	}
+	
+}
+
 .element-margin-top {
   margin-top: 5rem;
 }
@@ -427,7 +435,16 @@ blockquote {
   line-height: calc(1 + 0.5 / var(--font-body-scale));
   letter-spacing: 0.04rem;
 }
-  .product-form__input.product-form__input--dropdown label.form__label{
+
+
+.product-form .product-form__buttons {
+	margin-top: 30px;
+}
+#bcpo .selector-wrapper > :last-child {
+	margin-bottom: 0;
+}
+
+.product-form__input.product-form__input--dropdown label.form__label{
   font-size: 1.6rem;
   margin-bottom: 0;
   }
@@ -891,6 +908,28 @@ summary::-webkit-details-marker {
   }
 }
 
+
+@media screen and (max-width: 990px) {
+	.grid .grid__item {
+		width: 42%;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.grid {
+		display: block;
+		margin: 0 auto;
+		text-align: center;
+	}
+	.grid .grid__item {
+		width: auto;
+		display: inline-block;
+		margin: 0 auto;
+		max-width: none;
+	}
+}
+
+
 .grid:last-child {
   margin-bottom: 0;
 }
@@ -1024,6 +1063,9 @@ summary::-webkit-details-marker {
     box-sizing: content-box;
     margin: 0;
   }
+  .product--thumbnail .product__media-item:not(.is-active), .product--thumbnail_slider .product__media-item:not(.is-active) {
+	  display: none;
+  }
 
   .grid--peek .grid__item {
     min-width: 35%;
@@ -1038,7 +1080,7 @@ summary::-webkit-details-marker {
   }
 
   .grid--2-col-tablet-down .grid__item {
-    width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
+   // width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
   }
 
   .slider--tablet.grid--peek.grid--2-col-tablet-down .grid__item,
@@ -1075,7 +1117,7 @@ summary::-webkit-details-marker {
   }
 
   .grid--2-col-tablet-down .grid__item {
-    width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
+    //width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
   }
 
   .grid--1-col-tablet-down.grid--peek .grid__item {
@@ -2274,6 +2316,13 @@ input[type='checkbox'] {
   a#cart-icon-bubble {
     
     border-bottom: 1px solid rgba(0,0,0,0) !important;
+}
+
+@media (max-width: 750px) { 
+	a#cart-icon-bubble {
+		margin-bottom: 10px;
+	}
+	
 }
 
   .cart-count-bubble > span {
@@ -4214,15 +4263,42 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 	text-align: center;
 }
 
-h1.product__title, .product-text h1, .product-name-mobile { color: #000;text-align: center; text-transform: none; font-size: 3.2rem; font-weight: 700; margin-bottom: 1em; 
+.sauna-enclosure-kit-upgrade, .sauna-cover-set-emf-shield, .emf-shield {
+	border-top: 1px solid #939393;
+	border-bottom: 1px solid #939393;
+	padding: 2em 0 1em 0;
+	margin: 0 0 2em 0;
+}
+
+h1.product__title, .product-text h1, .product-name-mobile { 
+	color: #000;
+	text-align: center; 
+	text-transform: none; 
+	font-size: 3.2rem; 
+	font-weight: 700; 
+	padding-bottom: 1em; 
+	margin-bottom: 0;
  }
+
+@media (min-width: 991px) {
+	h1.funky-margin { 
+		margin-bottom: 4rem;
+	}
+}
+
+
 .product-name-mobile { display: none; text-align: center; margin: .5em 0 0 0; padding: 0 1em; }
 .product-text .price {
-		text-align: center;
-		font-family: lft-etica-mono,sans-serif;
-		font-weight: 400;
+	text-align: center;
+	font-family: lft-etica-mono,sans-serif;
+	font-weight: 400;
+	display: inline-block;
+	margin-bottom: 1em;
 }
+@media (min-width: 991px) {
+
 	.product-text h1 + p { margin-top: -1.5em; }
+}
 		.product-text h1 + p.product-price { margin: 0; }
 	.product-text .btn { display: block; padding: 1em 0; }
 	.product-price { font-size: 2rem; }
@@ -4335,7 +4411,7 @@ h1.product__title, .product-text h1, .product-name-mobile { color: #000;text-ali
 .size-chart th { text-align: left; font-weight: 700; padding: 10px; font-size: 1.4rem; }
 .size-chart td { text-align: left; font-size: 1.4rem; border-bottom: 1px solid #939393; padding: 10px; }
 
-.atc-outOfStock { display: none; }
+/* .atc-outOfStock { display: none; } */
 
 .atc-box.outOfStockClass .atc-outOfStock { display: block; }
 .atc-box.outOfStockClass .atcMain { opacity: 0; height: 0; width: 0; padding: 0; }
@@ -5752,7 +5828,7 @@ sup {
 	.stickyBG { display: none; }
 	
 	.free-shipping { font-size: 1.4rem; line-height: 1.3em; text-align: center;  }
-	.product-text h1 { display: none; }
+	/* .product-text h1 { display: none; } */
 	.product-name-mobile { display: block; font-size: 2.6rem; }
 	.product-wrap { flex-direction: column; margin: 20px 0; }
 	.product-gallery { max-width: 500px; margin: 0 auto 30px auto; }
@@ -5840,7 +5916,10 @@ sup {
 
 @media all and (max-width: 650px) {
 	.product-info-tabs { flex-wrap: wrap; }
-	.product-info-tab { border: none !important; }
+	.product-info-tab { 
+		border: none !important; 
+		margin-bottom: 16px;
+	}
 	.pid-cols { flex-direction: column-reverse; margin-top: 20px; }
 	.pid-col-img { width: 80%; max-width: 400px; margin: 0 auto 20px auto; }
 	.pid-col-text { width: 100%; }
@@ -6030,7 +6109,7 @@ span[data-ml]::before {
 	width: 100%;
 }
 
-@media (max-width: 990px) {
+@media (max-width: 1350px) {
 	#bcpo:not(.g-card) .bcpo-dropdown {
 		display: block !important;
 
@@ -6234,11 +6313,4 @@ a#cart-icon-bubble {
 
 .product__modal-opener:hover .product__media-icon {
 	border: none;
-}
-	
-
-.product-media-modal__toggle{
-	background-color: rgba(198,122,38,.7);
-	border: none;
-	color: #fff;
 }
