--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -214,9 +214,11 @@
           {%- when '@app' -%}
             {% render block %}
           {%- when 'text' -%}
+          {% if block.settings.text != blank %}
             <p class="product__text{% if block.settings.text_style == 'uppercase' %} caption-with-letter-spacing{% elsif block.settings.text_style == 'subtitle' %} subtitle{% endif %}" {{ block.shopify_attributes }}>
               {{- block.settings.text -}}
             </p>
+            {%- endif -%}
           {%- when 'title' -%}
             <h1 class="product__title" {{ block.shopify_attributes }}>
               {{ product.title | escape }}
@@ -485,25 +487,35 @@
                 {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
                   <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}" disabled>
                   <div class="product-form__buttons">
-                    <button
-                      type="submit"
-                      name="add"
-                      class="product-form__submit button button--full-width {% if block.settings.show_dynamic_checkout and product.selling_plan_groups == empty %}button--secondary{% else %}button--primary{% endif %}"
-                    {% if product.selected_or_first_available_variant.available == false %}disabled{% endif %}
-                    >
-                        <span>
-                          {%- if product.selected_or_first_available_variant.available -%}
-                            {{ 'products.product.add_to_cart' | t }}
-                          {%- else -%}
-                            {{ 'products.product.sold_out' | t }}
-                          {%- endif -%}
-                        </span>
-                        <div class="loading-overlay__spinner hidden">
-                          <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-                            <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
-                          </svg>
-                        </div>
-                    </button>
+                    {% if product.selected_or_first_available_variant.available == false %}
+                    <div class="atc-outOfStock">
+						
+                      <p><strong>Sorry, this item is out of stock.</strong></p>
+                    
+                  </div>
+                    
+                    {% else %}
+                        <button
+                        type="submit"
+                        name="add"
+                        class="product-form__submit button button--full-width {% if block.settings.show_dynamic_checkout and product.selling_plan_groups == empty %}button--secondary{% else %}button--primary{% endif %}"
+                      {% if product.selected_or_first_available_variant.available == false %}disabled{% endif %}
+                      >
+                          <span>
+                            {%- if product.selected_or_first_available_variant.available -%}
+                              {{ 'products.product.add_to_cart' | t }}
+                            {%- else -%}
+                              {{ 'products.product.sold_out' | t }}
+                            {%- endif -%}
+                          </span>
+                          <div class="loading-overlay__spinner hidden">
+                            <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+                              <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
+                            </svg>
+                          </div>
+                      </button>
+                    {% endif %}
+                    
                     {%- if block.settings.show_dynamic_checkout -%}
                       {{ form | payment_button }}
                     {%- endif -%}
@@ -560,18 +572,37 @@
          
 				
         {%- endfor -%}
-            <div class="op-30day"><div><strong>Order Processing:</strong> <span id="orderProcessing">
+
+        <div class="op-30day-box">
+          {% if product.selected_or_first_available_variant.available == true %}
+        <div class="op-30day">
+          {% if product.metafields.my_fields.thirty_day_returns == true %}
+            <style>
+              .op-30day {
+                text-align: left !important;
+              }
+            </style>
+            <div>
+          {% else %}
+            <div style="width: 100%;">
+          {% endif %}
+            <strong>Order Processing:</strong> <span id="orderProcessing">
               {% if product.metafields.lead-time.leadtime != blank %}
-            {{product.metafields.lead-time.leadtime}}.
-            {% else %}
+             {{ product.metafields.lead-time.leadtime }}.
+             {% else %}
               1–3 days.
               {% endif %}
-            </span>  
+            </span>            
+            </div>
+            {% if product.metafields.my_fields.thirty_day_returns == true %}
+              <div>30-Day Returns</div>
+            {% endif %}
+        </div>
             <p class="fineprint oos-fineprint"  style="width: 100%; margin-top: .5em; ">Processing time is an estimate of time between your order being placed and your product being shipped.</p>          
             </div>
               
+            {% endif %}
 						</div>
-            <hr/>
             {% if product.metafields.my_fields.sidebar_description == true %}
               <div style="text-align: left;">
                 <p><strong>Details</strong></p>
@@ -611,7 +642,16 @@
 						<span data-ml="breadText"><ul><li>Starting at 0% APR for 6 months*</li><li>Traditional installment loan</li><li>Check your rate without affecting your credit score</li></ul><p>*Subject to approval of credit application. Rates range from 0% to 29.99% APR, resulting in, for example, 24 monthly payments of $46.14 at 9.99% APR, per $1,000 borrowed. APRs will vary depending on credit qualifications, loan amount, and term. Bread<sup>®</sup>&nbsp;pay-over-time plans are loans made by Comenity Capital Bank.</p></span>
 						<p class="fineprint">Check your eligibility in minutes at checkout.</p>
 					</div>
-				</div>		
+				</div>
+        <p style="font-style: italic; font-size: 1.2rem; text-align: right; margin-top: -1em; display: none;">
+          {% assign current_variant = product.selected_or_first_available_variant %}
+            <strong>SKU: </strong>
+            <span class="theSKU">
+              <span class="variant-sku">{{ current_variant.sku }}</span>
+            </span>&nbsp;&nbsp;
+          <strong>UPC: </strong>
+          <span class="theUPC">{{ current_variant.barcode }}</span>
+        </p>		
       </div>
     </div>
   </div>
