--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -227,7 +227,7 @@
                 {{- block.settings.text -}}
               </p>
 				{%- when 'title' -%}
-                <h1 id="theProduct" data-plugSKUUS="" data-plugSKUUK="" data-plugSKUEU="" data-plugSKUSW="" data-plugSKUAU="" data-plugSKUBR="" data-plugSKUIN=""  data-plugUPCUS="" data-plugUPCUK="" data-plugUPCEU="" data-plugUPCSW="" data-plugUPCAU="" data-plugUPCBR="" data-plugUPCIN="">{{ product.title | escape }}</h1>
+                <h1 id="theProduct">{{ product.title | escape }}</h1>
           	  
               {%- when 'price' -%}
               <div class="no-js-hidden single-page-price" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
@@ -510,25 +510,45 @@
               </div>
             {% endif %}
             <div class="op-30day-box">
-                
+
                     <div class="op-30day">
-                        <div style="width: 100%;"><strong>Order Processing:</strong> <span id="orderProcessing">
+                      {% if product.metafields.my_fields.thirty_day_returns == true %}
+                        <style>
+                          .op-30day {
+                            text-align: left !important;
+                          }
+                        </style>
+                        <div>
+                      {% else %}
+                        <div style="width: 100%;">
+                      {% endif %}
+                        <strong>Order Processing:</strong> <span id="orderProcessing">
                           {% if product.metafields.lead-time.leadtime != blank %}
-                         {{product.metafields.lead-time.leadtime}}.
+                         {{ product.metafields.lead-time.leadtime }}.
                          {% else %}
                           1–3 days.
                           {% endif %}
                         </span>            
                         </div>
+                        {% if product.metafields.my_fields.thirty_day_returns == true %}
+                          <div>30-Day Returns</div>
+                        {% endif %}
                     </div>
                     <p class="fineprint oos-fineprint"  style="width: 100%; margin-top: .5em; ">Processing time is an estimate of time between your order being placed and your product being shipped.</p>
                 
             </div>
-            
-            <div class="warranty-trial">
-                <div class="pwt product-warranty">10-year Warranty</div><div class="pwt product-trial">100-day Trial</div>
-            </div>
-            
+            {% if product.metafields.my_fields.thirty_day_returns != true %}
+              <div class="warranty-trial">
+                  <div class="pwt product-warranty">
+                    
+                    {% if product.metafields.my_fields.custom_warranty == blank %}
+                    10-year Warranty
+                    {% else %}
+                      {{ product.metafields.my_fields.custom_warranty }}-year Warranty
+                    {% endif %}
+                  </div><div class="pwt product-trial">100-day Trial</div>
+              </div>
+            {% endif %}
             
             <div class="pay-over-time">
                 <div class="pot-head">Pay Over Time</div>
@@ -556,8 +576,15 @@
                     <p class="fineprint">Check your eligibility in minutes at checkout.</p>
                 </div>
             </div>
-            <p style="font-style: italic; font-size: 1.2rem; text-align: right; margin-top: -1em;"><strong>SKU: </strong><span class="theSKU">{% assign current_variant = product.selected_or_first_available_variant %}
-              <span class="variant-sku">{{ current_variant.sku }}</span></span>&nbsp;&nbsp;<strong>UPC: </strong><span class="theUPC">{{ current_variant.barcode }}</span></p>
+            <p style="font-style: italic; font-size: 1.2rem; text-align: right; margin-top: -1em; display: none;">
+              {% assign current_variant = product.selected_or_first_available_variant %}
+                <strong>SKU: </strong>
+                <span class="theSKU">
+                  <span class="variant-sku">{{ current_variant.sku }}</span>
+                </span>&nbsp;&nbsp;
+              <strong>UPC: </strong>
+              <span class="theUPC">{{ current_variant.barcode }}</span>
+            </p>
 
               {{ 'component-pickup-availability.css' | asset_url | stylesheet_tag }}
 
