--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -302,11 +302,43 @@ cart-remove-button .icon-remove {
   }
 
   .cart-item {
-    display: grid;
+    display: block;
     grid-template: repeat(2, auto) / repeat(4, 1fr);
     gap: 1.5rem;
     margin-bottom: 3.5rem;
+    width: 100%;
+    vertical-align: top;
+    border: 1px solid #eee;
+    padding: 0 3rem;
   }
+
+  .cart-items *.right {
+    text-align: center;
+  }
+
+  tr.cart-item td .price {
+    text-align: center;
+  }
+
+  tr.cart-item td {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 100%;
+    text-align: center;
+    border: 0;
+    display: block;
+}
+
+.cart-item__details>* {
+  max-width: 100%;
+  text-align: center !important;
+  margin: 0 auto;
+}
+
+.cart-item .quantity {
+  position: static;
+  margin: 0 auto;
+}
 
   .cart-item:last-child {
     margin-bottom: 0;
@@ -452,3 +484,13 @@ td.cart-item__price .product-option s{
     width: 60%;
   }
 }
+
+
+@media only screen and (min-width: 900px) and (max-width: 1330px)  {
+  td.cart-item_details  {
+    padding: 30px 15px;
+  }
+
+}
+
+
