--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -43,7 +43,7 @@
 
 
 <cart-items class="page-width{% if cart == empty %} is-empty{% else %} section-{{ section.id }}-padding{% endif %}">
-  <div class="cart__warnings" style="margin-bottom: 8rem">
+  <div class="cart__warnings" style="margin-bottom: rem">
     <h1 class="cart__empty-text">{{ 'sections.cart.empty' | t }}</h1>
     <a href="https://saunadev.myshopify.com/products?filter=all" class="btn">
       {{ 'general.continue_shopping' | t }}
@@ -192,7 +192,6 @@
                   </td>
 
                   <td class="cart-item__quantity">
-                    <p class="cart-labels"><strong>Total Price</strong></p>
                     <div class="cart-item__quantity-wrapper">
                       <label class="visually-hidden" for="Quantity-{{ item.index | plus: 1 }}">
                         {{ 'products.product.quantity.label' | t }}
